--- a/Calculator.html
+++ b/Calculator.html
@@ -52,7 +52,7 @@
 
 </center>
 
-<script src="main.js"></script>
-<script src="sound.js"></script>
+<script src="js/main.js"></script>
+<script src="js/sound.js"></script>
 </body>
 </html>
